<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".login.presentation.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <ImageView
            android:id="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="6dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="3dp"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llSignUp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/clToolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/set_up"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:text="@string/finalize_your_account"
            android:textSize="14sp"
            android:textColor="@color/text_grey_color"
            android:fontFamily="@font/inter_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/edittext_box_color"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            android:elevation="3dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/text_grey_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_black_color"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/text_grey_color"
                android:textSize="14sp"
                android:imeOptions="actionNext"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:textCursorDrawable="@drawable/cursor_black"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/edittext_box_color"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            android:elevation="3dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/text_grey_color"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:inputType="textPassword"
                android:textColor="@color/text_black_color"
                android:hint="@string/password"
                android:textColorHint="@color/text_grey_color"
                android:textSize="14sp"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@drawable/cursor_black"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/edittext_box_color"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            android:elevation="3dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/text_grey_color"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:inputType="textPassword"
                android:textColor="@color/text_black_color"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/text_grey_color"
                android:textSize="14sp"
                android:imeOptions="actionDone"
                android:textCursorDrawable="@drawable/cursor_black"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:fontFamily="@font/inter_medium"
            app:backgroundTint="@color/black"
            app:cornerRadius="15dp" />

        <LinearLayout
            android:gravity="center_vertical"
            android:paddingVertical="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_weight="1"
                android:background="@color/view_line_color"
                android:layout_width="0dp"
                android:layout_height="1.5dp"/>

            <TextView
                android:text="@string/or"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/inter_semibold"
                android:paddingHorizontal="10dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_weight="1"
                android:background="@color/view_line_color"
                android:layout_width="0dp"
                android:layout_height="1.5dp"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSignUpWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            android:text="@string/sign_up_with_google"
            android:textColor="@android:color/black"
            android:fontFamily="@font/inter_medium"
            app:icon="@drawable/ic_google"
            app:iconTintMode="multiply"
            app:iconGravity="textStart"
            app:backgroundTint="@color/white"
            app:cornerRadius="15dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0.8dp" />

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/llAlreadyAccount"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:layout_gravity="bottom"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_black_color"
                android:textSize="14sp"
                android:fontFamily="@font/inter_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"
                android:text="@string/log_in"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:fontFamily="@font/inter_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>