<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustResize"
    tools:context=".login.presentation.LoginActivity">

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/llRegisterHere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llRegisterAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/get_started_now"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/log_in_to_continue"
                android:textColor="@color/text_grey_color"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:autofillHints="emailAddress"
                android:clickable="true"
                android:elevation="3dp"
                android:focusable="true"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/edittext_box_color"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="false"
                app:hintTextColor="@color/text_grey_color"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="#ACB5BB">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/inter_regular"
                    android:hint="Username"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/text_black_color"
                    android:textColorHint="@color/text_grey_color"
                    android:textSize="14sp"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:elevation="3dp"
                android:focusable="true"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/edittext_box_color"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintEnabled="false"
                app:hintTextColor="@color/text_grey_color"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="#ACB5BB">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/text_black_color"
                    android:textColorHint="@color/text_grey_color"
                    android:textSize="14sp"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_semibold"
                android:paddingStart="15dp"
                android:paddingBottom="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="18dp"
                android:text="@string/log_in"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/black"
                app:cornerRadius="15dp"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress_load"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="multiply"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/mbLogin"
                app:layout_constraintEnd_toEndOf="@id/mbLogin"
                app:layout_constraintStart_toStartOf="@id/mbLogin"
                app:layout_constraintTop_toTopOf="@id/mbLogin"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="@color/view_line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:paddingHorizontal="10dp"
                android:text="@string/or"
                android:textColor="@color/dark_grey"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="@color/view_line_color" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSignUpWithGoogle"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:elevation="3dp"
            android:fontFamily="@font/inter_medium"
            android:paddingVertical="18dp"
            android:text="@string/sign_in_with_google"
            android:textColor="@android:color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconTintMode="multiply"
            app:strokeColor="@color/text_dark_grey_color"
            app:strokeWidth="0.5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/inter_regular"
            android:text="New User?"
            android:textColor="@color/text_grey_color"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>